<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_whill_vehicle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hayashi.hyt2001@icloud.com">apollo-22</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>whill_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
